src/tests/snapshots/niri__tests__window_opening__check_target_output_and_workspace@ws2-fsF-wfsAU-spA2.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: AU\nset parent: A2\nconfig:\nworkspace \"ws-1\" {\n    open-on-output \"headless-1\"\n}\n\nworkspace \"ws-2\" {\n    open-on-output \"headless-2\"\n}\n\nwindow-rule {\n    exclude title=\"parent\"\n\n    open-on-workspace \"ws-2\"\n    open-fullscreen false\n}\n\nwindow-rule {\n    match title=\"parent\"\n    open-on-output \"headless-2\"\n}"
expression: snapshot
---
final monitor: headless-2
final workspace: 0 (ws-2)

initial configure:
size: 936 × 1048, bounds: 1888 × 1048, states: []

post-map configures:
size: 0 × 0, bounds: 1920 × 1080, states: []
size: 1 × 1, bounds: 1920 × 1080, states: []
